<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  <item android:id="@+id/search"
      android:title="@string/search"
      android:icon="@drawable/ic_search"
      app:actionViewClass="androidx.appcompat.widget.SearchView"
      app:showAsAction="ifRoom|collapseActionView" />
  <item
      android:id="@+id/systemAppToggle"
      android:title="@string/systemAppToggle"
      android:icon="@drawable/ic_system_apps_on"
      android:checkable="true"
      app:showAsAction="ifRoom" />
  <item
      android:id="@+id/archivedAppToggle"
      android:title="@string/archivedAppToggle"
      android:icon="@drawable/archived_apps_toggle_selector"
      android:checkable="true"
      app:showAsAction="ifRoom" />

  <item android:id="@+id/export"
    android:title="@string/export"
    android:icon="@android:drawable/ic_menu_save"
    app:showAsAction="ifRoom" />
  <item android:id="@+id/selectionMode"
    android:title="@string/select_apps"
    android:icon="@android:drawable/ic_menu_edit"
    app:showAsAction="ifRoom" />
  <item android:id="@+id/selectAllVisible"
    android:title="@string/select_all_visible"
    app:showAsAction="never" />
  <item android:id="@+id/clearSelection"
    android:title="@string/clear_selection"
    app:showAsAction="never" />
  <item android:id="@+id/cancelSelection"
    android:title="@string/cancel_selection"
    app:showAsAction="ifRoom" />
  <item android:id="@+id/summary"
    android:title="@string/summary"
    android:icon="@drawable/ic_summary"
    app:showAsAction="ifRoom" />
  <item android:id="@+id/settings"
    android:title="@string/settings"
    app:showAsAction="never" />
</menu>
