<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <SwitchPreferenceCompat
        android:key="crash_reporting_enabled"
        android:title="@string/crash_reporting_title"
        android:summary="@string/crash_reporting_summary"
        android:defaultValue="true" />

    <SwitchPreferenceCompat
        android:key="include_usage_stats_in_export"
        android:title="@string/export_usage_stats_title"
        android:summary="@string/export_usage_stats_summary"
        android:defaultValue="false" />

    <ListPreference
        android:key="theme_mode"
        android:title="@string/theme_title"
        app:useSimpleSummaryProvider="true"
        android:entries="@array/theme_entries"
        android:entryValues="@array/theme_values"
        android:defaultValue="SYSTEM" />
</PreferenceScreen>